ppvm (0.1.1) UNRELEASED; urgency=low

  * Fix a typo in the manual page.
  * Fix integer overflow when rounding numbers up to the unit size.

 -- Jakub Wilk <jwilk@jwilk.net>  Sun, 01 Feb 2015 17:57:37 +0100

ppvm (0.1) unstable; urgency=low

  * Initial release.

 -- Jakub Wilk <jwilk@jwilk.net>  Fri, 30 Jan 2015 14:17:29 +0100