@@ -2,8 +2,9 @@ ppvm (0.1.1) UNRELEASED; urgency=low
 
   * Fix a typo in the manual page.
   * Fix integer overflow when rounding numbers up to the unit size.
+  * Avoid trying to set limits that cannot be represented as rlim_t.
 
- -- Jakub Wilk <jwilk@jwilk.net>  Sun, 01 Feb 2015 17:57:37 +0100
+ -- Jakub Wilk <jwilk@jwilk.net>  Sun, 01 Feb 2015 18:15:58 +0100
 
 ppvm (0.1) unstable; urgency=low
 
